--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "homepage": "https://github.com/enigmadigm/process-manager#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "pm2": "^4.5.4"
   },
   "devDependencies": {
     "eslint": "^7.19.0"
